// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for 's submitIdentifyEvent destination action: all fields 1`] = `
Object {
  "data": "peter@example.com",
  "kind": "Identify",
  "leadRefs": Array [
    Object {
      "type": "client-id",
      "value": "user1234",
    },
    Object {
      "type": "client-id",
      "value": "anonId1234",
    },
    Object {
      "type": "email",
      "value": "peter@example.com",
    },
  ],
  "timestamp": 1671371213652,
  "type": "tracking",
  "url": "Cge8DWzjce",
  "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1",
  "values": Object {
    "email": "peter@example.com",
  },
}
`;

exports[`Testing snapshot for 's submitIdentifyEvent destination action: required fields 1`] = `
Object {
  "data": "peter@example.com",
  "kind": "Identify",
  "leadRefs": Array [
    Object {
      "type": "client-id",
      "value": "user1234",
    },
    Object {
      "type": "client-id",
      "value": "anonId1234",
    },
    Object {
      "type": "email",
      "value": "peter@example.com",
    },
  ],
  "timestamp": 1671371213632,
  "type": "tracking",
  "url": "https://segment.com/academy/",
  "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 9_1 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1",
  "values": Object {
    "email": "peter@example.com",
  },
}
`;
